--- a/app/src/main/res/drawable/third_layer.xml
+++ b/app/src/main/res/drawable/third_layer.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/colorPrimaryDark"
+        android:startColor="@color/colorGradient"
         android:endColor="@color/black"
         android:angle="90"/>
 
