--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#333C45</color>
+    <color name="colorPrimaryDark">#FF23292F</color>
+    <color name="colorGradient">#4CAF50</color>
+    <color name="colorAccent">#333C45</color>
+    <color name="colorBackground">#333C45</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#cecece</color>
+    <color name="progressBackground">#CFD8DC</color>
 </resources>
