--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:gravity="bottom"
@@ -10,9 +10,15 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/nav_dropdown_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show Popup" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:drawableEnd="@drawable/ic_keyboard_arrow_down_white_24dp"
+        android:text="Categories"
+        android:textAllCaps="false"
+        android:textSize="18sp" />
 
-</LinearLayout>
+</RelativeLayout>
