--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,5 +10,19 @@
     android:background="@color/colorPrimaryDark">
 
 
+    <ProgressBar
+        android:id="@+id/GreenProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="16dp"
+        android:layout_gravity="center_vertical"
+        android:indeterminate="false"
+        android:layout_margin="16dp"
+        android:progressDrawable="@drawable/progress_bar"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="44dp" />
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+</RelativeLayout>
