--- a/app/src/main/res/menu/nav_dropdown.xml
+++ b/app/src/main/res/menu/nav_dropdown.xml
@@ -1,15 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/one"
-        android:title="One"/>
+        android:id="@+id/categories"
+        android:title="Categories"/>
 
     <item
-        android:id="@+id/two"
-        android:title="Two"/>
+        android:id="@+id/user"
+        android:title="User"/>
 
     <item
-        android:id="@+id/three"
-        android:title="Three"/>
+        android:id="@+id/settings"
+        android:title="Settings"/>
 
 </menu>
