--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
 
     </android.support.design.widget.NavigationView>
 
+    <!--app:headerLayout="@layout/nav_header_main"-->
 
 
 </android.support.v4.widget.DrawerLayout>
