--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,24 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context=".main.MainActivity"
     tools:showIn="@layout/app_bar_main"
     android:background="@color/colorPrimaryDark">
 
+    <FrameLayout
+        android:id="@+id/main_replacable_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/GreenProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="16dp"
-        android:layout_gravity="center_vertical"
-        android:indeterminate="false"
-        android:layout_margin="16dp"
-        android:progressDrawable="@drawable/progress_bar"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="44dp" />
-
-
+    </FrameLayout>
 
 
 </RelativeLayout>
