--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="wrap_content"
     android:gravity="bottom"
     android:layout_marginTop="24dp"
     android:orientation="vertical"
-    android:background="@color/colorPrimary"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimaryDark"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@color/colorPrimary" />
+
 
     <Button
         android:id="@+id/nav_dropdown_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:background="?android:attr/selectableItemBackground"
         android:drawableEnd="@drawable/ic_keyboard_arrow_down_white_24dp"
         android:text="Categories"
         android:textAllCaps="false"
         android:textSize="18sp" />
+
+
+    <!--<TextView-->
+        <!--android:layout_below="@+id/nav_dropdown_button"-->
+        <!--android:id="@+id/as"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Hello"-->
+        <!--android:textSize="18sp"/>-->
+
+    <!--<TextView-->
+        <!--android:layout_below="@+id/as"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Hello"-->
+        <!--android:textSize="18sp"/>-->
+
 
 </RelativeLayout>
