progress util add

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#2E2E38</color>
     <color name="colorPrimaryDark">#222126</color>
     <color name="colorAccent">#D63438</color>
+    <color name="colorProgress">#ad008f</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
 </resources>
