--- a/app/src/main/res/drawable/progress_bar.xml
+++ b/app/src/main/res/drawable/progress_bar.xml
@@ -11,8 +11,8 @@
     <item android:id="@android:id/progress">
         <scale android:scaleWidth="100%" android:useIntrinsicSizeAsMinimum="true">
             <shape>
-                <corners android:radius="16dp" />
-                <solid android:color="@color/colorPrimary" />
+                <corners android:radius="15dp" />
+                <solid android:color="@color/colorProgress" />
                 <size android:width="40dp"/>
             </shape>
         </scale>
