--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -1,26 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".main.fragments.TodayFragment"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    tools:context=".main.fragments.TodayFragment">
 
-    <ProgressBar
-        android:id="@+id/GreenProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="16dp"
-        android:layout_gravity="center_vertical"
-        android:indeterminate="false"
-        android:layout_margin="16dp"
-        android:progressDrawable="@drawable/progress_bar"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="44dp" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="80dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="16dp"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/progress_bar"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="44dp"/>
+
+        <TextView
+            android:id="@+id/test_in_progress"
+            android:layout_alignStart="@id/progress_bar" android:layout_alignTop="@id/progress_bar"
+            android:layout_alignEnd="@id/progress_bar" android:layout_alignBottom="@id/progress_bar"
+            android:background="@android:color/transparent"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+
+
+
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
