--- a/app/src/main/res/layout/fragment_not_completed.xml
+++ b/app/src/main/res/layout/fragment_not_completed.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.fragments.NotCompletedFragment">
+    tools:context=".fragments.NotCompletedFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
